--- a/style.css
+++ b/style.css
@@ -1,77 +1,90 @@
-
 body {
-margin:0;
-padding:0;
+    margin:0;
+    padding:0;
 }
 
 div#header{
-width:100%;
-height:30%;
-position:fixed;
-z-index:100;
-background-color:#89CCE2;
+    width:100%;
+    height:30%;
+    position:fixed;
+    z-index:100;
+    background-color:#89CCE2;
  } 
 
 div#footer{
-width:100%;
-height:30%;
-position:fixed;
-bottom:0;
-background-color:#073949;
-}
+    width:100%;
+    height:30%;
+    position:fixed;
+    bottom:0;
+    background-color:#073949;
+    }
 
 div#content{
-background-color:#0068AC;
-position:fixed;
-width:100%;
-height:100%;
-
-    }
+    background-color:#0068AC;
+    position:fixed;
+    width:100%;
+    height:100%;
+}
 
 
 .topnav {
     background-color: #000;
-    overflow: hidden;
-    
+    width: 100%;
+    height: 40px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
-.topnav a {
+#logoCont {
+    width: 20%;
+    float: left;
+}
+
+#logo {
     font-family:'Josefin Sans', sans-serif;
     float: left;
     color: #FFF;
     text-align: center;
-    padding: 14px 16px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 40px;
+    padding-left: 16px;
     background-color: #000;
-    margin-right: 150px;
 }
-.topnav b {
+
+#linksCont {
+    width: 40%;
+    padding-left: 10%;
+    padding-right: 10%;
+    float: left;
+    text-align: center;
+}
+
+.links {
     font-family:'Open Sans', sans-serif;
     float: left;
     color: #FFF;
-    text-align: center;
-    padding: 14px 16px;
     text-decoration: none;
     font-size: 15px;
     background-color: #000;
-  
+    width: 33%;
 }
 
-
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
+.links:hover {
+    color: #89cce2;
+    cursor: pointer;
 }
 
-.topnav b:hover {
-    background-color: #ddd;
-    color: black;
+#loginCont {
+    width: 20%;
+    float: left;
 }
 
-
-.topnav a.active {
-    background-color: #FFF;
-    color: black;
+#smallButton {
+    height: 40px;
+    width: 100px;
+    margin-right: 16px;
+    background-color: #6eb43f;
+    border-radius: 10px;
+    float: right;
+    z-index: 1000;
 }
-  
