--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
     margin:0;
     padding:0;
@@ -84,7 +85,12 @@ div#content{
     width: 100px;
     margin-right: 16px;
     background-color: #6eb43f;
+    color: #FFF;
     border-radius: 10px;
     float: right;
     z-index: 1000;
+    font-family: 'Open Sans', sans-serif; 
+    text-align: center;
+    line-height: 2.5;
+  
 }
