--- a/style.css
+++ b/style.css
@@ -1,18 +1,32 @@
 
+
 body {
     margin:0;
     padding:0;
 }
 
-div#header{
+.header{
     width:100%;
     height:30%;
     position:fixed;
     z-index:100;
     background-color:#89CCE2;
+    
+    
  } 
+.header p{
+  color:#FFF;
+    font-family:'Josefin Sans', sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: left;
+    width: 30%; 
+    float: right;
+    padding-right: 50px;
+  
+}
 
-div#footer{
+.footer{
     width:100%;
     height:30%;
     position:fixed;
@@ -20,7 +34,7 @@ div#footer{
     background-color:#073949;
     }
 
-div#content{
+.content{
     background-color:#0068AC;
     position:fixed;
     width:100%;
