--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 body {
     margin:0;
     padding:0;
@@ -23,9 +21,30 @@ body {
     width: 30%; 
     float: right;
     padding-right: 50px;
+    padding-bottom:20px;
   
 }
-
+.header button{
+    height: 40px;
+    width: 150px;
+    margin-right: 0px;
+    background-color: #6eb43f;
+    color: #FFF;
+    border-radius: 10px;
+    float: right;
+    z-index: 1000;
+    font-family: 'Open Sans', sans-serif; 
+    text-align: center;
+    line-height: 2;
+    position: relative;
+    top: 60%;
+    right: 0%;
+    left: 20%;
+    
+   
+    
+  
+}
 .footer{
     width:100%;
     height:30%;
@@ -108,3 +127,6 @@ body {
     line-height: 2.5;
   
 }
+
+
+
