Making things more responsive

--- a/style.css
+++ b/style.css
@@ -3,16 +3,24 @@ body {
     padding:0;
 }
 
-.header{
+.left_half {
+    width: 50%;
+    float: left;
+}
+
+.right_half {
+    width: 50%;
+    float: left;
+}
+
+.section1{
     width:100%;
-    height:30%;
-    position:fixed;
+    float: left;
     z-index:100;
     background-color:#89CCE2;
-    
-    
  } 
-.header p{
+
+.section1 p{
   color:#FFF;
     font-family:'Josefin Sans', sans-serif;
     font-size: 25px;
@@ -22,9 +30,9 @@ body {
     float: right;
     padding-right: 50px;
     padding-bottom:20px;
-  
 }
-.header button{
+
+.section1 button{
     height: 40px;
     width: 150px;
     margin-right: 0px;
@@ -40,26 +48,21 @@ body {
     top: 60%;
     right: 0%;
     left: 20%;
-    
-   
-    
-  
 }
-.footer{
-    width:100%;
-    height:30%;
-    position:fixed;
-    bottom:0;
-    background-color:#073949;
-    }
 
-.content{
+.section2{
     background-color:#0068AC;
-    position:fixed;
+    float: left;
     width:100%;
-    height:100%;
+    height: 100px;
 }
 
+.section3{
+    width:100%;
+    height: 100px;
+    float: left;
+    background-color:#073949;
+}
 
 .topnav {
     background-color: #000;
