--- a/style.css
+++ b/style.css
@@ -20,6 +20,21 @@ h2 {
     width: 90%; 
 }
 
+h3 {
+    color:#FFF;
+    font-family:'Josefin Sans', sans-serif;
+    font-size: 40px;
+    font-weight: bold;
+    text-align: left;
+    color: #073949;
+}
+
+h4 {
+   color: #ffffff; 
+   font-family:'Open Sans', sans-serif;
+   font-size: 20px;
+}
+
 .left_half {
     width: 40%;
     padding: 10% 5%;
@@ -39,23 +54,16 @@ h2 {
 .section1{
     width:100%;
     float: left;
-    background-color:#89CCE2;
  } 
 
-h1 {
-    color:#FFF;
-    font-family:'Josefin Sans', sans-serif;
-    font-size: 50px;
-    font-weight: bold;
-    text-align: left;
-    width: 90%; 
-}
+ #homePage_s1 {
+    background-color: #89CCE2;
+ }
 
 .section1 button{
     height: 70px;
     width: 250px;
     margin-right: 0px;
-    background-color: #6eb43f;
     color: #FFF;
     border-radius: 20px;
     z-index: 1000;
@@ -63,6 +71,10 @@ h1 {
     font-size: 20px;
     line-height: 2;
     position: relative;
+}
+
+#homePage_button {
+    background-color: #6eb43f;
 }
 
 .section2{
@@ -74,7 +86,7 @@ h1 {
 .long_lesson {
     width: 60%;
     margin: 5% 20%;
-    height: 150px;
+    height: 200px;
     background-color: #ffffff;
 }
 
@@ -88,7 +100,7 @@ h1 {
 .forparents_lessons {
     width: 29%;
     margin: 2% 2%;
-    height: 300px;
+    height: 350px;
     float: left;
     background-color: white;
 }
@@ -157,4 +169,40 @@ h1 {
     font-family: 'Open Sans', sans-serif; 
     text-align: center;
     line-height: 2.5;
+}
+
+/*Lessons Page Styling*/
+.lessons_container {
+    width: 70%;
+    padding-left: 15%;
+    padding-right: 15%;
+}
+
+.lessonsBox {
+    width: 27%;
+    margin: 7% 3%;
+    height: 320px;
+    float: left;
+    box-shadow: 5px 5px 10px grey;
+}
+
+.Top_PicHalf {
+    width: 100%;
+    height: 70%;
+    float: left;
+    background-color: #6EB43F;
+}
+
+.Bottom_TextHalf {
+    width: 100%;
+    float: left;
+}
+
+/*For Parent Page Styling*/
+#forParents_s1 {
+    background-color: #6EB43F;
+}
+
+#forParents_button {
+    background-color: #89CCE2
 }
