--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     margin:0;
     padding:0;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 12px;
 }
 
 h1 {
@@ -33,6 +35,13 @@ h4 {
    color: #ffffff; 
    font-family:'Open Sans', sans-serif;
    font-size: 20px;
+}
+
+.lessonBox_title {
+    font-family:'Josefin Sans', sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    color: #073949;
 }
 
 .left_half {
@@ -86,8 +95,23 @@ h4 {
 .long_lesson {
     width: 60%;
     margin: 5% 20%;
-    height: 200px;
+    height: 250px;
     background-color: #ffffff;
+}
+
+.LL_img {
+    width: 50%;
+    height: 100%;
+    background-color: #C9D6A5;
+    float: left;
+}
+
+.LL_text {
+    width: 45%;
+    margin: 2.5% 2.5%;
+    height: 80%;
+    float: left;
+    text-align: center;
 }
 
 .section3{
@@ -181,14 +205,14 @@ h4 {
 .lessonsBox {
     width: 27%;
     margin: 7% 3%;
-    height: 320px;
+    height: 350px;
     float: left;
     box-shadow: 5px 5px 10px grey;
 }
 
 .Top_PicHalf {
     width: 100%;
-    height: 70%;
+    height: 60%;
     float: left;
     background-color: #6EB43F;
 }
@@ -196,6 +220,7 @@ h4 {
 .Bottom_TextHalf {
     width: 100%;
     float: left;
+    text-align: center;
 }
 
 /*For Parent Page Styling*/
