--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ h4 {
     margin: 5% 20%;
     height: 250px;
     background-color: #ffffff;
+    color: black;
 }
 
 .LL_img {
@@ -127,6 +128,7 @@ h4 {
     height: 350px;
     float: left;
     background-color: white;
+    color: black;
 }
 
 .topnav {
@@ -191,6 +193,7 @@ h4 {
     float: right;
     z-index: 1000;
     font-family: 'Open Sans', sans-serif; 
+    font-size: 15px;
     text-align: center;
     line-height: 2.5;
 }
@@ -207,7 +210,9 @@ h4 {
     margin: 7% 3%;
     height: 350px;
     float: left;
+    text-align: center;
     box-shadow: 5px 5px 10px grey;
+    color: black;
 }
 
 .Top_PicHalf {
@@ -219,6 +224,7 @@ h4 {
 
 .Bottom_TextHalf {
     width: 100%;
+    height: 40%;
     float: left;
     text-align: center;
 }
@@ -230,4 +236,30 @@ h4 {
 
 #forParents_button {
     background-color: #89CCE2
+}
+
+/*Lesson Page Styling*/
+.lessonheader {
+    background-color: #073949;
+    width: 100%;
+    float: left;
+    height: 250px;
+    padding: 20px 20px;
+}
+
+.lessontitle {
+    padding-top: 150px;
+}
+
+.lessoncontent {
+    width: 80%;
+    padding: 2% 10%;
+    float: left;
+}
+
+.lessonsubheader {
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 25px;
+    color: #777777;
+    padding-top: 20px;
 }
