--- a/style.css
+++ b/style.css
@@ -207,9 +207,9 @@ h4 {
 }
 
 .lessonsBox {
-    width: 27%;
-    margin: 7% 3%;
-    height: 350px;
+    width: 40%;
+    margin: 7% 5%;
+    height: 500px;
     float: left;
     text-align: center;
     box-shadow: 5px 5px 10px grey;
@@ -224,10 +224,11 @@ h4 {
 }
 
 .Bottom_TextHalf {
-    width: 100%;
-    height: 40%;
+    width: 96%;
     float: left;
     text-align: center;
+    margin-left: 2%;
+    margin-right: 2%;
 }
 
 /*For Parent Page Styling*/
