Fixed lesson boxes on for parents page

--- a/style.css
+++ b/style.css
@@ -125,11 +125,12 @@ h4 {
 
 .forparents_lessons {
     width: 29%;
-    margin: 2% 2%;
+    margin: 5% 2%;
     height: 350px;
     float: left;
     background-color: white;
     color: black;
+    box-shadow: 5px 5px 10px #2F4F4F;
 }
 
 .topnav {
