--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h2 {
     font-size: 40px;
     font-weight: bold;
     text-align: left;
-    width: 90%; 
+    width: 90%;
 }
 
 h3 {
@@ -33,7 +33,7 @@ h3 {
 }
 
 h4 {
-   color: #ffffff; 
+   color: #ffffff;
    font-family:'Open Sans', sans-serif;
    font-size: 20px;
 }
@@ -64,7 +64,7 @@ h4 {
 .section1{
     width:100%;
     float: left;
- } 
+ }
 
  #homePage_s1 {
     background-color: #89CCE2;
@@ -77,7 +77,7 @@ h4 {
     color: #FFF;
     border-radius: 20px;
     z-index: 1000;
-    font-family: 'Open Sans', sans-serif; 
+    font-family: 'Open Sans', sans-serif;
     font-size: 20px;
     line-height: 2;
     position: relative;
@@ -194,7 +194,7 @@ h4 {
     border-radius: 10px;
     float: right;
     z-index: 1000;
-    font-family: 'Open Sans', sans-serif; 
+    font-family: 'Open Sans', sans-serif;
     font-size: 15px;
     text-align: center;
     line-height: 2.5;
@@ -265,4 +265,14 @@ h4 {
     font-size: 25px;
     color: #777777;
     padding-top: 20px;
+}
+
+/*the "view all our lessons" button on home page*/
+.lesson_button {
+  float: right;
+  color: #FFF;
+  text-decoration: none;
+  font-size: 15px;
+  width: 30%;
+  margin-bottom: 15px;
 }
