--- a/style.css
+++ b/style.css
@@ -224,6 +224,12 @@ h4 {
     background-color: #6EB43F;
 }
 
+.self_presentation_PicHalf {
+  width: 100%;
+  height: 60%;
+  float: left;
+}
+
 .Bottom_TextHalf {
     width: 96%;
     float: left;
