--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 body {
     margin:0;
     padding:0;
@@ -258,6 +260,10 @@ h4 {
 
 .lessontitle {
     padding-top: 150px;
+}
+.lessonpic {
+    height: 20px;
+    width: 20px;
 }
 
 .lessoncontent {
