--- a/style.css
+++ b/style.css
@@ -226,6 +226,12 @@ h4 {
     background-color: #6EB43F;
 }
 
+.likepic {
+    width: 100%;
+    height: 60%;
+    float: left;
+}
+
 .self_presentation_PicHalf {
   width: 100%;
   height: 60%;
