--- a/style.css
+++ b/style.css
@@ -238,6 +238,12 @@ h4 {
   float: left;
 }
 
+.esteem-pic {
+  width: 100%;
+  height: 60%;
+  float: left;
+}
+
 .Bottom_TextHalf {
     width: 96%;
     float: left;
