--- a/style.css
+++ b/style.css
@@ -38,6 +38,12 @@ h4 {
    font-size: 20px;
 }
 
+h5 {
+    color: grey;
+    font-family:'Open Sans', sans-serif;
+    font-size: 14px;
+}
+
 .lessonBox_title {
     font-family:'Josefin Sans', sans-serif;
     font-size: 25px;
@@ -299,7 +305,7 @@ h4 {
 }
 
 .lessontitle {
-    padding-top: 150px;
+    padding-top: 125px;
 }
 
 .lessoncontent {
