--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ h5 {
 }
 
 .topnav {
-    background-color: #000;
+    background-color: white;
     width: 100%;
     height: 40px;
     padding-top: 20px;
@@ -168,12 +168,12 @@ h5 {
 #logo {
     font-family:'Josefin Sans', sans-serif;
     float: left;
-    color: #FFF;
+    color: black;
     text-align: center;
     text-decoration: none;
     font-size: 25px;
     padding-left: 16px;
-    background-color: #000;
+    background-color: white;
 }
 
 #linksCont {
