--- a/style.css
+++ b/style.css
@@ -155,13 +155,13 @@ h5 {
 .topnav {
     background-color: white;
     width: 100%;
-    height: 40px;
+    height: 58px;
     padding-top: 20px;
     padding-bottom: 20px;
 }
 
 #logoCont {
-    width: 20%;
+    width: 30%;
     float: left;
 }
 
@@ -170,15 +170,22 @@ h5 {
     float: left;
     color: black;
     text-align: center;
+    vertical-align: top;
     text-decoration: none;
     font-size: 25px;
-    padding-left: 16px;
+    padding-left: 40px;
     background-color: white;
+}
+
+#logo img {
+  width:100px;
+  height:auto;
+  padding-bottom:6px;
+  vertical-align: middle;
 }
 
 #linksCont {
     width: 50%;
-    padding-left: 10%;
     padding-right: 10%;
     float: left;
     text-align: center;
@@ -187,11 +194,11 @@ h5 {
 .links {
     font-family:'Open Sans', sans-serif;
     float: left;
-    color: #FFF;
+    color: black;
     text-decoration: none;
-    font-size: 15px;
-    background-color: #000;
-    width: 18%;
+    font-size: 17px;
+    background-color: white;
+    width: 20%;
 }
 
 .links:hover {
