--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ h5 {
     height: 58px;
     padding-top: 20px;
     padding-bottom: 20px;
+    vertical-align: middle;
 }
 
 #logoCont {
@@ -170,7 +171,6 @@ h5 {
     float: left;
     color: black;
     text-align: center;
-    vertical-align: top;
     text-decoration: none;
     font-size: 25px;
     padding-left: 40px;
@@ -392,4 +392,16 @@ h5 {
     float: right;
     text-decoration: none;
     color: grey;
+}
+
+@media only screen and (max-width: 1000px) {
+  .topnav {
+      height: 90px;
+  }
+
+  #linksCont {
+      padding-top: 15px;
+      padding-right: 2%;
+      width: 60%;
+  }
 }
