--- a/style.css
+++ b/style.css
@@ -52,9 +52,16 @@ h5 {
 }
 
 .left_half {
-    width: 40%;
-    padding: 10% 5%;
+    width: 27%;
+    padding-left:13%;
+    padding-top:2%;
+    padding-bottom:2%;
     float: left;
+}
+
+.left_half img {
+  width: 300px;
+  height:auto;
 }
 
 .headerPic {
@@ -64,7 +71,7 @@ h5 {
 .right_half {
     width: 46%;
     float: left;
-    padding: 5% 2%;
+    padding-top:2%;
 }
 
 .section1{
@@ -74,6 +81,7 @@ h5 {
 
  #homePage_s1 {
     background-color: #89CCE2;
+    padding-bottom:20px;
  }
 
 .section1 button{
@@ -155,15 +163,13 @@ h5 {
 .topnav {
     background-color: white;
     width: 100%;
-    height: 58px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    vertical-align: middle;
+    height: 90px;
 }
 
 #logoCont {
     width: 30%;
     float: left;
+    padding-top: 14.5px;
 }
 
 #logo {
@@ -199,11 +205,15 @@ h5 {
     font-size: 17px;
     background-color: white;
     width: 20%;
+    padding-top:16.5px;
+    padding-bottom:16.5px;
 }
 
 .links:hover {
-    color: #89cce2;
+    color: white;
     cursor: pointer;
+    font-weight:bold;
+    background-color: #89cce2;
 }
 
 #loginCont {
@@ -317,7 +327,7 @@ h5 {
 
 /*Lesson Page Styling*/
 .lessonheader {
-    background-color: #073949;
+    background-color: #89cce2;  /* #073949; */
     width: 100%;
     float: left;
     height: 250px;
