--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ h1 {
     font-size: 50px;
     font-weight: bold;
     text-align: left;
+    margin-left:8%;
 }
 
 h2 {
@@ -54,24 +55,24 @@ h5 {
 .left_half {
     width: 27%;
     padding-left:13%;
-    padding-top:2%;
-    padding-bottom:2%;
+    padding-top:1%;
     float: left;
 }
 
-.left_half img {
-  width: 300px;
-  height:auto;
+.headerPic {
+  width: 280px;
 }
 
-.headerPic {
-    width: 100%;
+.headerPic1 {
+  padding-top: 20px;
+  padding-left: 20px;
+  width: 400px;
 }
 
 .right_half {
     width: 46%;
     float: left;
-    padding-top:2%;
+    padding-top:1%;
 }
 
 .section1{
@@ -167,7 +168,7 @@ h5 {
 }
 
 #logoCont {
-    width: 30%;
+    width: 25%;
     float: left;
     padding-top: 14.5px;
 }
@@ -191,7 +192,7 @@ h5 {
 }
 
 #linksCont {
-    width: 50%;
+    width: 65%;
     padding-right: 10%;
     float: left;
     text-align: center;
@@ -204,7 +205,7 @@ h5 {
     text-decoration: none;
     font-size: 17px;
     background-color: white;
-    width: 20%;
+    width: 16%;
     padding-top:16.5px;
     padding-bottom:16.5px;
 }
@@ -320,6 +321,7 @@ h5 {
 /*For Parent Page Styling*/
 #forParents_s1 {
     background-color: #6EB43F;
+    height: 260px;
 }
 
 #forParents_button {
@@ -332,18 +334,24 @@ h5 {
     background-color: #89cce2;  /* #073949; */
     width: 100%;
     float: left;
-    height: 250px;
+    height: 220px;
     padding: 20px 20px;
 }
 
 .lessontitle {
-    padding-top: 125px;
+    padding-top: 110px;
+    width: 75%;
 }
 
 .lessoncontent {
     width: 80%;
     padding: 2% 10%;
     float: left;
+}
+
+.lessoncontent p {
+  width: 800px;
+  /* font-size: 15px; */
 }
 
 .lessonsubheader {
@@ -368,7 +376,7 @@ h5 {
     width: 96%;
     float: left;
     background-color: #d3d3d3;
-    height: 30px;
+    height: 40px;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 2%;
@@ -378,6 +386,7 @@ h5 {
 .footCont_title {
     width: 10%;
     float: left;
+    padding-top:10px;
 }
 
 .fTL {
@@ -411,9 +420,24 @@ h5 {
       height: 90px;
   }
 
-  #linksCont {
-      padding-top: 15px;
-      padding-right: 2%;
-      width: 60%;
+  #logoCont {
+      width: 18%;
   }
+
+  #logo {
+      font-size: 17px;
+  }
+
+  #logo img {
+    width: 70px;
+    height:auto;
+  }
+
+  #linksCont {
+      padding-left: 3%;
+      width: 75%;
+      padding-right: 0%;
+  }
+
+
 }
