--- a/style.css
+++ b/style.css
@@ -53,8 +53,9 @@ h5 {
 }
 
 .left_half {
-    width: 27%;
-    padding-left:13%;
+    width: 30%;
+    padding-left:8%;
+    padding-right:3%;
     padding-top:1%;
     float: left;
 }
@@ -64,9 +65,9 @@ h5 {
 }
 
 .headerPic1 {
-  padding-top: 20px;
-  padding-left: 20px;
-  width: 400px;
+  padding-top: 0%;
+  padding-left: 5%;
+  width: 85%;
 }
 
 .right_half {
@@ -110,9 +111,9 @@ h5 {
 }
 
 .long_lesson {
-    width: 60%;
+    width: 50%;
     margin: 5% 20%;
-    height: 250px;
+    height: 300px;
     background-color: #ffffff;
     color: black;
 }
@@ -122,24 +123,24 @@ h5 {
     height: 100%;
     float: left;
     background-position: center;
-    background-size: 100%;
+    background-size: 90%;
     background-repeat: no-repeat;
 }
 
-#home_SelfPres {
-    background-image: url("img/self-presentation.png");
+#home_CyberBullying {
+    background-image: url("img/cyberbullyingfinal.png");
     background-color: #019587;
 }
 
-#home_CyberBullying {
-    background-image: url("img/dislike.png");
+#home_SelfPres {
+    background-image: url("img/safepostfinal.png");
     background-color: #f8981d;
 }
 
 .LL_text {
     width: 45%;
     margin: 2.5% 2.5%;
-    height: 80%;
+    height: 100%;
     float: left;
     text-align: center;
 }
@@ -192,8 +193,9 @@ h5 {
 }
 
 #linksCont {
-    width: 65%;
-    padding-right: 10%;
+    width: 60%;
+    padding-right: 5%;
+    padding-left: 3%;
     float: left;
     text-align: center;
 }
@@ -244,6 +246,14 @@ h5 {
     padding-right: 10%;
 }
 
+.lessons_container a:link {
+  text-decoration: none;
+}
+
+.black {
+  color: black;
+}
+
 .lessonsBox {
     width: 40%;
     margin-left:6.4%;
@@ -263,7 +273,7 @@ h5 {
     float: left;
     background-color: #6EB43F;
     background-position: center;
-    background-size: 100%;
+    background-size: 70%;
     background-repeat: no-repeat;
 }
 
@@ -279,16 +289,16 @@ h5 {
   float: left;
 }
 
-#lesson_GetStart {
-    background-image: url("img/rocket.png");
+#lesson_CyberBullying {
+    background-image: url("img/cyberbullyingfinal.png");
     background-color: #073949;
     background-position: bottom;
 }
 
-#lesson_CyberBullying {
+/* #lesson_CyberBullying {
     background-image: url("img/dislike.png");
     background-color: #f8981d;
-}
+} */
 
 #lesson_SelfPres{
     background-image: url("img/self-presentation.png");
@@ -316,6 +326,11 @@ h5 {
     text-align: center;
     margin-left: 2%;
     margin-right: 2%;
+}
+
+#linkunderline {
+  text-decoration: underline;
+  color: blue;
 }
 
 /*For Parent Page Styling*/
@@ -415,29 +430,98 @@ h5 {
     color: grey;
 }
 
-@media only screen and (max-width: 1000px) {
-  .topnav {
-      height: 90px;
-  }
+@media only screen and (max-width: 1665px) {
 
   #logoCont {
-      width: 18%;
+      width: 30%;
   }
 
   #logo {
-      font-size: 17px;
+      font-size: 25px;
   }
 
   #logo img {
-    width: 70px;
+    width: 25%;
     height:auto;
   }
 
   #linksCont {
-      padding-left: 3%;
-      width: 75%;
+      padding-left: 1%;
+      width: 65%;
       padding-right: 0%;
   }
 
+  .left_half {
+      width: 30%;
+      padding-left:3%;
+      padding-right:3%;
+      padding-top:1%;
+      float: left;
+  }
+
+  .headerPic1 {
+    padding-top: 10%;
+    padding-left: 3%;
+    padding-right: 3%;
+    width: 100%;
+  }
+
+  .right_half {
+      width: 60%;
+      float: left;
+      padding-top:1%;
+  }
+
+  .Top_PicHalf {
+      width: 100%;
+      height: 60%;
+      background-size: 80%;
+  }
+}
+
+@media only screen and (max-width: 1359px) {
+  #logo img {
+    width: 20%;
+  }
+
+  .Top_PicHalf {
+      height: 50%;
+      background-size: 80%;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  #logo {
+    font-size: 18px;
+  }
+
+  #logo img {
+    width: 30%;
+  }
+
+  #logoCont {
+      width: 20%;
+  }
+
+  #linksCont {
+      width: 75%;
+  }
+
+  .right_half h1 {
+    font-size: 40px;
+  }
+
+  .right_half h4 {
+    font-size: 15px;
+  }
+
+  .lessonheader h1 {
+    font-size: 40px;
+  }
+
+  .Top_PicHalf {
+      height: 50%;
+      background-size: 100%;
+  }
 
 }
