--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ h5 {
     margin-left:6.4%;
     margin-bottom:5%;
     margin-top:3%;
-    height: 350px;
+    height: 500px;
     float: left;
     text-align: center;
     box-shadow: 5px 5px 10px grey;
@@ -327,6 +327,7 @@ h5 {
 
 .Bottom_TextHalf {
     width: 96%;
+    height: 50%;
     float: left;
     text-align: center;
     margin-left: 2%;
