--- a/style.css
+++ b/style.css
@@ -296,33 +296,33 @@ h5 {
 
 #lesson_CyberBullying {
     background-image: url("img/cyberbullyingfinal.png");
-    background-color: #EDDEA4;
+    background-color: #ffffff;
     background-position: bottom;
 }
 
 #lesson_News{
     background-image: url("img/newslitfinal.png");
-    background-color: #FFCDB2;
+    background-color: #ffffff;
 }
 
 #lesson_Info {
     background-image: url("img/safepostfinal.png");
-    background-color: #0FA3B1;
+    background-color: #ffffff;
 }
 
 #lesson_Online{
     background-image: url("img/selfpresfinal.png");
-    background-color: #F7A072;
+    background-color: #ffffff;
 }
 
 #lesson_DigitalFoot {
     background-image: url("img/digfootfinal.png");
-    background-color: #F9F7F3;
+    background-color: #ffffff;
 }
 
 #lesson_Privacy {
     background-image: url("img/privacyfinal.png");
-    background-color: #42CAFD;
+    background-color: #ffffff;
 }
 
 .Bottom_TextHalf {
