--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ h5 {
     width: 100%;
     height: 100%;
     float: left;
-    background-color: #6EB43F;
+    background-color: #89CCE2;
     background-position: center;
     background-size: 70%;
     background-repeat: no-repeat;
@@ -354,7 +354,7 @@ h5 {
 
 /*For Parent Page Styling*/
 #forParents_s1 {
-    background-color: #6EB43F;
+    background-color: #89CCE2;
     height: 260px;
 }
 
