--- a/style.css
+++ b/style.css
@@ -156,6 +156,8 @@ h5 {
     background-color: #ffffff;
 }
 
+
+
 .LL_text {
     width: 45%;
     margin: 2.5% 2.5%;
@@ -186,6 +188,18 @@ h5 {
     background-color: white;
     width: 100%;
     height: 90px;
+}
+
+.customClassTwo{
+    background-color: white;
+    width: 100%;
+    height: 90px;
+}
+
+.myCode {
+  background-color: white;
+  width: 100%;
+  height: 90px;
 }
 
 #logoCont {
@@ -239,6 +253,25 @@ h5 {
     background-color: #89cce2;
 }
 
+.customlinks {
+    font-family:'Open Sans', sans-serif;
+    float: left;
+    color: black;
+    text-decoration: none;
+    font-size: 17px;
+    background-color: white;
+    width: 16%;
+    padding-top:31.5px;
+    padding-bottom:31.5;
+}
+
+.customlinks:hover {
+    color: white;
+    cursor: pointer;
+    font-weight:bold;
+    background-color: #89cce2;
+}
+
 #loginCont {
     width: 20%;
     float: left;
@@ -259,14 +292,6 @@ h5 {
     line-height: 2.5;
 } */
 
-#eduguide_button {
-    background-color: #6eb43f;
-    color: #FFF;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
-    cursor: pointer;
-}
-
 /*Lessons Page Styling*/
 .lessons_container {
     width: 80%;
@@ -283,7 +308,7 @@ h5 {
 }
 
 .Bottom_TextHalf .black, a {
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .lessonsBox {
@@ -301,9 +326,9 @@ h5 {
 
 .Top_PicHalf {
     width: 100%;
-    height: 100%;
+    height: 60%;
     float: left;
-    background-color: #89CCE2;
+    background-color: #6EB43F;
     background-position: center;
     background-size: 70%;
     background-repeat: no-repeat;
@@ -323,33 +348,33 @@ h5 {
 
 #lesson_CyberBullying {
     background-image: url("img/cyberbullyingfinal.png");
-    background-color: #ffffff;
+    background-color: #073949;
     background-position: bottom;
 }
 
 #lesson_News{
     background-image: url("img/newslitfinal.png");
-    background-color: #ffffff;
+    background-color: #019587;
 }
 
 #lesson_Info {
     background-image: url("img/safepostfinal.png");
-    background-color: #ffffff;
+    background-color: #f8981d;
 }
 
 #lesson_Online{
     background-image: url("img/selfpresfinal.png");
-    background-color: #ffffff;
+    background-color: #275660;
 }
 
 #lesson_DigitalFoot {
     background-image: url("img/digfootfinal.png");
-    background-color: #ffffff;
+    background-color: #FDFC4A;
 }
 
 #lesson_Privacy {
     background-image: url("img/privacyfinal.png");
-    background-color: #ffffff;
+    background-color: #00A59F;
 }
 
 .Bottom_TextHalf {
@@ -362,7 +387,7 @@ h5 {
 
 /*For Parent Page Styling*/
 #forParents_s1 {
-    background-color: #89CCE2;
+    background-color: #6EB43F;
     height: 260px;
 }
 
@@ -416,10 +441,21 @@ h5 {
 
 /*Footer Stylings*/
 .footer {
-    width: 96%;
+    width: 100%;
     float: left;
     background-color: #d3d3d3;
     height: 40px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 2%;
+    padding-left: 2%;
+}
+
+.customClass {
+    width: 100%;
+    float: left;
+    background-color: #d3d3d3;
+    height: 80px;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 2%;
@@ -535,6 +571,10 @@ h5 {
 
 @media only screen and (max-width: 1100px) {
   .topnav {
+    height: 80px;
+  }
+
+  .customClassTwo{
     height: 80px;
   }
 
