--- a/style.css
+++ b/style.css
@@ -245,6 +245,25 @@ h5 {
     background-color: #89cce2;
 }
 
+.customlinks {
+    font-family:'Open Sans', sans-serif;
+    float: left;
+    color: black;
+    text-decoration: none;
+    font-size: 17px;
+    background-color: white;
+    width: 16%;
+    padding-top:31.5px;
+    padding-bottom:31.5;
+}
+
+.customlinks:hover {
+    color: white;
+    cursor: pointer;
+    font-weight:bold;
+    background-color: #89cce2;
+}
+
 #loginCont {
     width: 20%;
     float: left;
