--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,23 @@
+/* why you no work */
+@font-face {
+  font-family: "AvenirNextLTPro", sans-serif;
+  src: url("../fonts/Avenir_Next/AvenirNextLTPro-Regular.otf")
+}
+
 body {
     margin:0;
     padding:0;
-    font-family: 'Open Sans', sans-serif;
+    /* font-family: 'Open Sans', sans-serif; */
     font-size: 14px;
     min-width: 850px;
 }
 
 h1 {
-    color:#FFF;
-    font-family:'Josefin Sans', sans-serif;
+    color:#333;
+    font-family:'Avenir Next', sans-serif;
     font-size: 50px;
     font-weight: bold;
     text-align: left;
-    margin-left:8%;
 }
 
 h2 {
@@ -20,8 +25,6 @@ h2 {
     font-family:'Josefin Sans', sans-serif;
     font-size: 40px;
     font-weight: bold;
-    text-align: left;
-    width: 90%;
 }
 
 h3 {
@@ -45,13 +48,6 @@ h5 {
     font-size: 14px;
 }
 
-.lessonBox_title {
-    font-family:'Josefin Sans', sans-serif;
-    font-size: 25px;
-    font-weight: bold;
-    color: #073949;
-}
-
 .left_half {
     width: 20%;
     padding-left:10%;
@@ -70,23 +66,14 @@ h5 {
   width: 85%;
 }
 
-.right_half {
-    width: 50%;
-    float: left;
-    padding-top:1%;
-}
-
-.section1{
-    width:100%;
-    float: left;
- }
-
- #homePage_s1 {
-    background-color: #89CCE2;
+.section1 {
+    background-color: #F1F8FB;
     padding-bottom:20px;
+    width: 100%;
+    float: left;
  }
 
-.section1 button{
+.section1 button {
     height: 70px;
     width: 250px;
     margin-right: 0px;
@@ -99,13 +86,8 @@ h5 {
     position: relative;
 }
 
-#homePage_button {
-    background-color: #6eb43f;
-    cursor: pointer;
-}
-
 .section2{
-    background-color:#0068AC;
+    background-color: #F1F8FB;
     float: left;
     width:100%;
 }
@@ -197,7 +179,7 @@ h5 {
 }
 
 .customClassTwo{
-    background-color: white;
+    background-color: #F1F8FB;
     width: 100%;
     height: 90px;
 }
@@ -206,17 +188,6 @@ h5 {
     width: 25%;
     float: left;
     padding-top: 14.5px;
-}
-
-#logo {
-    font-family:'Josefin Sans', sans-serif;
-    float: left;
-    color: black;
-    text-align: center;
-    text-decoration: none;
-    font-size: 25px;
-    padding-left: 40px;
-    background-color: white;
 }
 
 #logo img {
@@ -254,15 +225,14 @@ h5 {
 }
 
 .customlinks {
-    font-family:'Open Sans', sans-serif;
+    font-family:'Avenir Next', sans-serif;
     float: left;
-    color: black;
+    color: #A9A9A9;
     text-decoration: none;
     font-size: 17px;
-    background-color: white;
     width: 16%;
-    padding-top:31.5px;
-    padding-bottom:31.5;
+    margin: 30px 0px -30px 30px;
+    /* margin-bottom: -30px; */
 }
 
 .customlinks:hover {
@@ -462,7 +432,7 @@ h5 {
 .customClass {
     width: 100%;
     float: left;
-    background-color: #d3d3d3;
+    background-color: #F1F8FB;
     height: 80px;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -581,7 +551,7 @@ h5 {
   .topnav {
     height: 80px;
   }
-    
+
   .customClassTwo{
     height: 80px;
   }
