--- a/styles/all.css
+++ b/styles/all.css
@@ -1,52 +1,21 @@
-/* why you no work */
-@font-face {
-  font-family: "AvenirNextLTPro", sans-serif;
-  src: url("../fonts/Avenir_Next/AvenirNextLTPro-Regular.otf")
+/* ========== *
+ * = Global = *
+ * ========== */
+html * {
+    font-family: Avenir Next;
 }
 
 body {
-    margin:0;
-    padding:0;
-    /* font-family: 'Open Sans', sans-serif; */
-    font-size: 14px;
-    min-width: 850px;
+    margin: auto;
 }
 
-h1 {
-    color:#333;
-    font-family:'Avenir Next', sans-serif;
-    font-size: 50px;
-    font-weight: bold;
-    text-align: left;
+ul {
+	list-style-type: none;
 }
 
-h2 {
-    color:#FFF;
-    font-family:'Josefin Sans', sans-serif;
-    font-size: 40px;
-    font-weight: bold;
-}
-
-h3 {
-    color:#FFF;
-    font-family:'Josefin Sans', sans-serif;
-    font-size: 40px;
-    font-weight: bold;
-    text-align: left;
-    color: #073949;
-}
-
-h4 {
-   color: #ffffff;
-   font-family:'Open Sans', sans-serif;
-   font-size: 20px;
-}
-
-h5 {
-    color: grey;
-    font-family:'Open Sans', sans-serif;
-    font-size: 14px;
-}
+/* ========== *
+ * = Header = *
+ * ========== */
 
 .left_half {
     width: 20%;
@@ -80,7 +49,6 @@ h5 {
     color: #FFF;
     border-radius: 20px;
     z-index: 1000;
-    font-family: 'Open Sans', sans-serif;
     font-size: 20px;
     line-height: 2;
     position: relative;
@@ -206,7 +174,6 @@ h5 {
 }
 
 .links {
-    font-family:'Open Sans', sans-serif;
     float: left;
     color: black;
     text-decoration: none;
@@ -225,7 +192,6 @@ h5 {
 }
 
 .customlinks {
-    font-family:'Avenir Next', sans-serif;
     float: left;
     color: #A9A9A9;
     text-decoration: none;
@@ -256,7 +222,6 @@ h5 {
     border-radius: 10px;
     float: right;
     z-index: 1000;
-    font-family: 'Open Sans', sans-serif;
     font-size: 15px;
     text-align: center;
     line-height: 2.5;
@@ -265,156 +230,8 @@ h5 {
 #eduguide_button {
     background-color: #6eb43f;
     color: #FFF;
-    font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     cursor: pointer;
-}
-
-/*Lessons Page Styling*/
-.lessons_container {
-    width: 80%;
-    padding-left: 10%;
-    padding-right: 10%;
-}
-
-.lessons_container a:link {
-  text-decoration: none;
-}
-
-.black {
-  color: black;
-}
-
-.Bottom_TextHalf .black, a {
-  font-size: 14px;
-}
-
-.lessonsBox {
-    width: 40%;
-    margin-left:6.4%;
-    margin-bottom:5%;
-    margin-top:3%;
-    height: 500px;
-    float: left;
-    text-align: center;
-    box-shadow: 5px 5px 10px grey;
-    color: black;
-    overflow: hidden;
-}
-
-.Top_PicHalf {
-    width: 100%;
-    height: 100%;
-    float: left;
-    background-color: #89CCE2;
-    background-position: center;
-    background-size: 70%;
-    background-repeat: no-repeat;
-}
-
-.likepic {
-    width: 100%;
-    height: 60%;
-    float: left;
-}
-
-.esteem-pic {
-  width: 100%;
-  height: 60%;
-  float: left;
-}
-
-#lesson_CyberBullying {
-    background-image: url("img/cyberbullyingfinal.png");
-    background-color: #d3d3d3;
-    background-position: bottom;
-}
-
-#lesson_News{
-    background-image: url("img/newslitfinal.png");
-    background-color: #d3d3d3;
-}
-
-#lesson_Info {
-    background-image: url("img/safepostfinal.png");
-    background-color: #d3d3d3;
-}
-
-#lesson_Online{
-    background-image: url("img/selfpresfinal.png");
-    background-color: #d3d3d3;
-}
-
-#lesson_DigitalFoot {
-    background-image: url("img/digfootfinal.png");
-    background-color: #d3d3d3;
-}
-
-#lesson_Privacy {
-    background-image: url("img/privacyfinal.png");
-    background-color: #d3d3d3;
-}
-
-.Bottom_TextHalf {
-    width: 96%;
-    float: left;
-    text-align: center;
-    margin-left: 2%;
-    margin-right: 2%;
-}
-
-/*For Parent Page Styling*/
-#forParents_s1 {
-    background-color: #89CCE2;
-    height: 260px;
-}
-
-#forParents_button {
-    background-color: #89CCE2;
-    cursor: pointer;
-}
-
-/*Lesson Page Styling*/
-.lessonheader {
-    background-color: #89cce2;  /* #073949; */
-    width: 100%;
-    float: left;
-    height: 220px;
-    padding: 20px 20px;
-}
-
-.lessontitle {
-    padding-top: 110px;
-    width: 75%;
-}
-
-.lessoncontent {
-    width: 80%;
-    padding: 2% 10%;
-    margin-bottom:3%;
-    float: left;
-}
-
-.lessoncontent p {
-  width: 800px;
-  /* font-size: 15px; */
-}
-
-.lessonsubheader {
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 25px;
-    color: #777777;
-    padding-top: 20px;
-}
-
-/*the "view all our lessons" button on home page*/
-.lesson_button {
-  float: right;
-  color: #FFF;
-  text-decoration: none;
-  font-size: 15px;
-  width: 30%;
-  margin-bottom: 15px;
 }
 
 /*Footer Stylings*/
