--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,34 @@
+.section1 {
+    background-color: #F1F8FB;
+    padding-bottom:20px;
+    width: 100%;
+    float: left;
+ }
+
+.section1 button {
+    height: 70px;
+    width: 250px;
+    margin-right: 0px;
+    color: #FFF;
+    border-radius: 20px;
+    z-index: 1000;
+    font-size: 20px;
+    line-height: 2;
+    position: relative;
+}
+
+.section2 {
+    background-color: #F1F8FB;
+    float: left;
+    width:100%;
+}
+
 #intro {
   margin-left: 100px;
   margin-top: 2%;
   max-width: 40%;
   float: left;
 }
-
-/* FORMATTING SHIT */
 
 #logo {
   font-size: 30px;
@@ -34,11 +57,11 @@
 
 /* trying to fix arrows for carousel  */
 .carousel-control-next-icon {
-  background-color: #000;
+  caret-color: #000;
 }
 
 .carousel-control-prev-icon {
-  background-color: #000;
+  caret-color: #000;
 }
 
 .sr-only {
