--- a/styles/all.css
+++ b/styles/all.css
@@ -76,31 +76,8 @@ ul {
     font-size: 12px;
 }
 
-.section3{
-    width:90%;
-    float: left;
-    background-color:#073949;
-    padding: 2% 5%;
-}
-
-.forparents_lessons {
-    width: 29%;
-    margin: 5% 2%;
-    height: 350px;
-    float: left;
-    background-color: white;
-    color: black;
-    box-shadow: 5px 5px 10px #2F4F4F;
-}
-
 .topnav {
     background-color: white;
-    width: 100%;
-    height: 90px;
-}
-
-.customClassTwo{
-    background-color: #F1F8FB;
     width: 100%;
     height: 90px;
 }
@@ -118,30 +95,18 @@ ul {
   vertical-align: middle;
 }
 
-#linksCont {
+/* #linksCont {
     width: 60%;
     padding-right: 5%;
     padding-left: 3%;
     float: left;
     text-align: center;
-}
-
-.links {
-    float: left;
-    color: black;
-    text-decoration: none;
-    font-size: 17px;
-    background-color: white;
-    width: 16%;
-    padding-top:16.5px;
-    padding-bottom:16.5px;
-}
+} */
 
 .links:hover {
     color: white;
     cursor: pointer;
     font-weight:bold;
-    /* background-color: #89cce2; */
 }
 
 .customlinks {
@@ -151,26 +116,17 @@ ul {
     font-size: 17px;
     width: 16%;
     margin: 30px 0px -30px 30px;
-    /* margin-bottom: -30px; */
 }
 
 .customlinks:hover {
     color: white;
     cursor: pointer;
     font-weight:bold;
-    background-color: #89cce2;
 }
 
 #loginCont {
     width: 20%;
     float: left;
-}
-
-#eduguide_button {
-    background-color: #6eb43f;
-    color: #FFF;
-    font-size: 14px;
-    cursor: pointer;
 }
 
 /*Footer Stylings*/
@@ -240,32 +196,9 @@ ul {
       font-size: 25px;
   }
 
-  #logo img {
-    width: 25%;
-    height:auto;
-  }
-
   #linksCont {
-    padding-left: 1%;
-    width: 65%;
+    margin-left: 10%;
     padding-right: 0%;
-  }
-
-
-  .right_half {
-      width: 60%;
-      float: left;
-      padding-top:1%;
-  }
-
-  .Top_PicHalf {
-      width: 100%;
-      height: 55%;
-      background-size: 80%;
-  }
-
-  .fontbig {
-    font-size: 14px;
   }
 }
 
@@ -330,5 +263,4 @@ ul {
     height: 43%;
     background-size: 95%;
   }
-
 }
