--- a/styles/header.css
+++ b/styles/header.css
@@ -3,11 +3,18 @@
  * ========== */
 .header-container {
 	display: flex;
+  background-color: #F1F8FB;
+  width: 100%;
+  height: 90px;
 }
 
 .navbar-container {
 	margin-left: auto;
-	float: right;
+	float: left;
+  width: 60%;
+  /* padding-right: 2%;
+  padding-left: 3%; */
+  text-align: center;
 }
 
 .header-title {
