--- a/styles/header.css
+++ b/styles/header.css
@@ -12,16 +12,20 @@
 	margin-left: auto;
 	float: left;
   width: 60%;
-  /* padding-right: 2%;
-  padding-left: 3%; */
   text-align: center;
 }
 
-.header-title {
-	margin: 10px 20px;
-	float: left;
-	text-decoration: none;
-	font-weight: bold;
-	font-size: 30px;
-	color: white;
+.navbar-links {
+    float: left;
+    color: #A9A9A9;
+    text-decoration: none;
+    font-size: 17px;
+    width: 16%;
+    margin: 30px 0px -30px 30px;
+}
+
+.navbar-link:hover {
+    color: white;
+    cursor: pointer;
+    font-weight:bold;
 }
