--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 .section1 {
     background-color: #F1F8FB;
-    padding-bottom:20px;
+    padding-bottom: 4em;
     width: 100%;
     float: left;
  }
@@ -19,15 +19,21 @@
 
 .section2 {
     background-color: #F1F8FB;
+    text-align: center;
     float: left;
+    padding-top: 4em;
     width:100%;
 }
 
 #intro {
   margin-left: 100px;
-  margin-top: 2%;
+  margin-top: 4em;
   max-width: 40%;
   float: left;
+}
+
+#home_graphic {
+  margin-top: 1em;
 }
 
 #logo {
@@ -55,7 +61,15 @@
   font-weight: 500;
 }
 
+#modulePromo {
+  padding-top: 1em;
+  padding-left: 16em;
+  padding-right: 16em;
+  line-height: normal;
+}
+
 /* trying to fix arrows for carousel  */
+
 .carousel-control-next-icon {
   caret-color: #000;
 }
@@ -64,6 +78,7 @@
   caret-color: #000;
 }
 
+/* Screen Reader */
 .sr-only {
   color: #000;
 }
@@ -73,18 +88,12 @@
   color:#D2AC58;
 }
 
-h1 {
-  color:#333;
-  font-size: 48px;
-  font-weight: bold;
-  margin-top: 20px;
-}
-
 h4 {
   font-size: 18px;
   color: #A9A9A9;
   margin-top: 20px;
   margin-bottom: 40px;
+  line-height: normal;
 }
 
 p {
@@ -104,4 +113,67 @@ p {
   height: auto;
   margin-left: 8%;
   /* float: right; */
+}
+
+.long_lesson {
+    width: 50%;
+    margin: 5% 20%;
+    height: 300px;
+    background-color: #ffffff;
+    color: black;
+}
+
+.long_lesson_carousel {
+    width: 50%;
+    margin: 2% auto;
+    height: 300px;
+    background-color: #ffffff;
+    color: black;
+}
+
+.LL_img {
+    width: 50%;
+    height: 100%;
+    float: left;
+    background-position: center;
+    background-size: 90%;
+    background-repeat: no-repeat;
+}
+
+#home_CyberBullying {
+    background-image: url("img/cyberbullyingfinal.png");
+    background-color: #d3d3d3;
+}
+
+#home_SelfPres {
+    background-image: url("img/safepostfinal.png");
+    background-color: #d3d3d3;
+}
+
+#home_DigitalFoot {
+    background-image: url("img/digfootfinal.png");
+    background-color: #d3d3d3;
+}
+
+#home_Presentation {
+    background-image: url("img/selfpresfinal.png");
+    background-color: #d3d3d3;
+}
+#home_Privacy {
+    background-image: url("img/privacyfinal.png");
+    background-color: #d3d3d3;
+}
+
+#home_NewsLit {
+    background-image: url("img/newslitfinal.png");
+    background-color: #d3d3d3;
+}
+
+.LL_text {
+    width: 45%;
+    margin: 2.5% 2.5%;
+    height: 100%;
+    float: left;
+    text-align: center;
+    font-size: 12px;
 }
