--- a/styles/all.css
+++ b/styles/all.css
@@ -21,6 +21,25 @@ h2 {
   font-weight: 400;
 }
 
+h3 {
+  font-size: 24px;
+  font-weight: bold;
+  color: #2B292D;
+}
+
+h4 {
+  font-size: 18px;
+  color: #A9A9A9;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  line-height: normal;
+}
+
+p {
+  font-size: 18px;
+  color: #2B292D;
+}
+
 ul {
 	list-style-type: none;
 }
