added footer & styling, renamed lessons.html to modules.html

--- a/styles/all.css
+++ b/styles/all.css
@@ -2,11 +2,13 @@
  * = Global = *
  * ========== */
 html * {
-    font-family: Avenir Next;
+  font-family: Avenir Next;
 }
 
 body {
-    margin: auto;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
@@ -16,7 +18,7 @@ h1 {
 }
 
 h2 {
-  color: #2B292D;
+  color: #333333;
   font-size: 24px;
   font-weight: 400;
 }
@@ -24,7 +26,7 @@ h2 {
 h3 {
   font-size: 24px;
   font-weight: bold;
-  color: #2B292D;
+  color: #333333;
 }
 
 h4 {
@@ -37,7 +39,7 @@ h4 {
 
 p {
   font-size: 18px;
-  color: #2B292D;
+  color: #333333;
 }
 
 ul {
@@ -51,7 +53,7 @@ ul {
 }
 
 /*Footer Stylings*/
-.footer {
+/* .footer {
     width: 96%;
     float: left;
     background-color: #d3d3d3;
@@ -60,13 +62,13 @@ ul {
     padding-bottom: 20px;
     padding-right: 2%;
     padding-left: 2%;
-}
+} */
 
 .customClass {
     width: 100%;
     float: left;
-    background-color: #F1F8FB;
-    height: 80px;
+    background-color: #000;
+    height: 120px;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 2%;
