--- a/styles/modules.css
+++ b/styles/modules.css
@@ -1,97 +1,27 @@
-/*Lessons Page Styling*/
-.lessons_container {
-    width: 80%;
-    padding-left: 10%;
-    padding-right: 10%;
+/*Modules Page Styling*/
+.modules_container {
+  display: block;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.lessons_container a:link {
-  text-decoration: none;
-}
-
-.lessonheader {
-    background-color: #89cce2;  /* #073949; */
-    width: 100%;
-    float: left;
-    height: 220px;
-    padding: 20px 20px;
-}
-
-.lessontitle {
-    padding-top: 110px;
-    width: 75%;
-}
-
-.lessoncontent {
-    width: 80%;
-    padding: 2% 10%;
-    margin-bottom:3%;
-    float: left;
-}
-
-.lessoncontent p {
-  width: 800px;
-  /* font-size: 15px; */
-}
-
-.lessonsubheader {
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 25px;
-    color: #777777;
-    padding-top: 20px;
-}
-
-/*the "view all our lessons" button on home page*/
-.lesson_button {
-  float: right;
-  color: #FFF;
-  text-decoration: none;
-  font-size: 15px;
-  width: 30%;
-  margin-bottom: 15px;
-}
-
-.black {
-  color: black;
-}
-
-.Bottom_TextHalf .black, a {
-  font-size: 14px;
-}
-
-.lessonsBox {
-    width: 40%;
-    margin-left:6.4%;
-    margin-bottom:5%;
-    margin-top:3%;
+.moduleBox {
+    display: inline-block;
+    width: 500px;
     height: 500px;
-    float: left;
+    margin: 2em;
     text-align: center;
-    box-shadow: 5px 5px 10px grey;
-    color: black;
-    overflow: hidden;
+    box-shadow: 0px 4px 16px #C3C3C3;
 }
 
 .Top_PicHalf {
-    width: 100%;
-    height: 100%;
-    float: left;
-    background-color: #89CCE2;
+    height: 50%;
     background-position: center;
     background-size: 70%;
     background-repeat: no-repeat;
-}
-
-.likepic {
-    width: 100%;
-    height: 60%;
-    float: left;
-}
-
-.esteem-pic {
-  width: 100%;
-  height: 60%;
-  float: left;
+    background-image: url("img/home.png");
+    background-color: #000;
 }
 
 #lesson_CyberBullying {
@@ -131,4 +61,8 @@
     text-align: center;
     margin-left: 2%;
     margin-right: 2%;
+}
+
+.Bottom_TextHalf .black, a {
+  font-size: 14px;
 }
